pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-007-tabs.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/007-tabs.md
---
• 
  [32m────────────────────[0m
  [33m  [0m[33mfoo
[0m  [32m────────────────────[0m
