pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-010-tabs.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/010-tabs.md
---
]1337;SetMark\[1m[34m┄[0m[1m[34mFoo[0m
